force-app/main/default/objects/Social_Interaction__c/Social_Interaction__c.object-meta.xml
<CustomObject>
    <description>Normalized social interaction received from Meta, Facebook, or Instagram for attribution and review.</description>
    <label>Social Interaction</label>
    <nameField>
        <label>Social Interaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Social Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>