force-app/main/default/objects/Social_Interaction__c/fields/Attribution_Status__c.field-meta.xml
<CustomField>
    <fullName>Attribution_Status__c</fullName>
    <label>Attribution Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>