force-app/main/default/objects/Social_Interaction__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Social Interactions</relationshipLabel>
    <relationshipName>Social_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>