force-app/main/default/objects/Social_Interaction__c/fields/Commenter_Name__c.field-meta.xml
<CustomField>
    <fullName>Commenter_Name__c</fullName>
    <label>Commenter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>