force-app/main/default/objects/Social_Interaction__c/fields/Commenter_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Commenter_Profile_Id__c</fullName>
    <label>Commenter Profile Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>