force-app/main/default/objects/Social_Interaction__c/fields/Instagram_Media_Id__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Media_Id__c</fullName>
    <label>Instagram Media Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>