force-app/main/default/objects/Social_Interaction__c/fields/Matched_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Matched_Keyword__c</fullName>
    <label>Matched Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>