force-app/main/default/objects/Social_Interaction__c/fields/Meta_Ad_Id__c.field-meta.xml
<CustomField>
    <fullName>Meta_Ad_Id__c</fullName>
    <label>Meta Ad Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>