force-app/main/default/objects/Social_Interaction__c/fields/Meta_Ad_Set__c.field-meta.xml
<CustomField>
    <fullName>Meta_Ad_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meta Ad Set</label>
    <referenceTo>Meta_Ad_Set__c</referenceTo>
    <relationshipLabel>Social Interactions</relationshipLabel>
    <relationshipName>Social_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>