force-app/main/default/objects/Social_Interaction__c/fields/Meta_Comment_Id__c.field-meta.xml
<CustomField>
    <fullName>Meta_Comment_Id__c</fullName>
    <externalId>true</externalId>
    <label>Meta Comment Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>