force-app/main/default/objects/Social_Interaction__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <length>80</length>
    <type>Text</type>
</CustomField>