force-app/main/default/objects/Social_Interaction__c/fields/Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status__c</fullName>
    <label>Processing Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>